2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* HTTP.pm: Method names in codes were oldies.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: New file.

	* HTTP.pm: Reformed for manakai.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.

	* HTTP.pm: New Perl module (a copy of
	SuikaWiki |lib/SuikaWiki/Input/HTTP.pm|).