@@ -1,3 +1,11 @@
+2007-08-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* DOM-DocumentType.t, DOM-AttributeDefinition.t,
+	DOM-Entity.t, DOM-Notation.t: Tests for factory
+	methods are added.
+
+	* DOM-ElementTypeDefinition.t: New test script.
+
 2007-07-29  Wakaba  <wakaba@suika.fam.cx>
 
 	* Makefile: Rules for DIS tests are removed.
