@@ -1,3 +1,9 @@
+2007-08-12  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTTP.pm (path_info, query_string, request_method,
+	script_name): New attributes.  The class now
+	implements the |Message::IF::HTTPCGIRequest| interface.
+
 2007-08-11  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTTP.pm: Method names in codes were oldies.
